# tree-sitter-roc

./: Cargo.toml  README.md  grammar.js  log.html  package-lock.json  package.json  todo.md
bindings/rust/: build.rs  lib.rs
neovim/queries/: highlights.scm  indents.scm  locals.scm
queries/: highlights.scm  locals.scm
queries-generated/helix/queries/: highlights.scm  tags.scm
queries-generated/neovim/queries/: highlights.scm  tags.scm
queries-generated/zed/queries/: highlights.scm
query-maps/: helix.json  neovim.json  zed.json
samples/: all-roc-syntax.roc
src/: grammar.json  node-types.json  parser.c
test/corpus/: examples.txt  function.txt  indent.txt  lambda.txt  loops.txt  match.txt  modern_syntax.txt  module.txt  nums.txt  operators.txt  patterns.txt  record.txt  string.txt  structures.txt  tags.txt  types.txt  value.txt
test/corpus_old/: comments.txt  errors.txt  expressions.txt  headers.txt  if.txt  tags.txt  top_level.txt  when_is.txt
tools/: template-queries.js
